--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.1",
+    "jquery": "^3.6.0",
     "modern-normalize": "^1.1.0",
     "node-sass": "^6.0.0",
     "npm": "^7.20.0",
